--- a/source/stylesheets/_ggs.scss
+++ b/source/stylesheets/_ggs.scss
@@ -12,6 +12,9 @@ $ggs-column: 100% / 18 !default;
 $ggs-font-size: 16 !default;
 $ggs-em: $ggs-font-size * 1 !default;
 
+$base-font-size: 16px;
+$base-line-height: 24px;
+
 @import "compass";
 @import "compass/reset";
 @import "ggs/mixins";
