--- a/source/stylesheets/ggs/column/_four-column.scss
+++ b/source/stylesheets/ggs/column/_four-column.scss
@@ -2,22 +2,9 @@
   margin: 0 $ggs-column;
 }
 
-h1 {
-  @include adjust-font-size-to(24px);
-  @include rhythm(2,1,0,1,24px);
-  @include trailing-border(5px,1,24px);
-}
-
-h2 {
-  font-weight: normal;
-}
-
-h3 {
-  @include adjust-font-size-to(24px);
-}
-
 #main {
   background: #ccc;
+  @extend .wrapper;
 }
 
 @media screen and (min-width: 640px) {
