--- a/source/_header.haml
+++ b/source/_header.haml
@@ -1,1 +1,6 @@
-%h1 Golden Grid System Compass Framework
+%h1 Golden Grid System<br>Compass Framework
+%nav
+  %h2.hide Main Navigation
+/  %ul
+/    %li= link_to( "Typography", "#type" )
+/    %li= link_to( "Form", "#form" )
