--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -48,8 +48,10 @@ a {
 }
 
 #lists {
+  @include pie-clearfix;
   .list {
     @include padding-leader(.5,$font-s);
+    @include padding-trailer(1,$font-s);
     @extend .font-s;
   }
   .title {
