句子改段落

--- a/source/_paragraph.haml
+++ b/source/_paragraph.haml
@@ -1,6 +1,6 @@
 #paragraph
   %section
-    %h2.title Paragraph 句子
+    %h2.title Paragraph 段落
     :markdown
       **甲吐出**那飽吸過的*香煙*，愈會碰著痛苦。[甲吐出](#)那飽吸過的香煙，遂亦不受到阻礙，來和他們一拚！
     %p= lorem.sentences 5
