--- a/source/stylesheets/ggs/_type-size-presets.scss
+++ b/source/stylesheets/ggs/_type-size-presets.scss
@@ -56,6 +56,7 @@ h2 {
 
 h3 {
   @extend .font-l;
+  @include adjust-leading-to(2,$font-l);
 }
 
 h4 {
@@ -64,11 +65,13 @@ h4 {
 
 h5 {
   @extend .font-s;
+  @include adjust-leading-to(1,$font-s);
 }
 
 h6 {
   @extend .font-s;
   color: lighten($head-color ,26.5%);
+  @include adjust-leading-to(1,$font-s);
 }
 
 p {
@@ -77,9 +80,12 @@ p {
 }
 
 blockquote {
-  @extend .font-l;
   border-left: 5px solid $gray - #333;
   padding-left: 20px;
+  p {
+    @extend .font-l;
+    margin: 0;
+  }
   cite {
     @extend .font-s;
     color: fade-out($head-color ,.5);
