--- a/source/stylesheets/ggs/column/_four-column.scss
+++ b/source/stylesheets/ggs/column/_four-column.scss
@@ -3,8 +3,16 @@
   margin: 0 auto;
 }
 
-#hd {
-  @extend .wrapper;
+
+@media screen and (max-width: 640px) {
+  .content {
+    width: auto;
+    margin: 0 $ggs-column;
+  }
+
+  #hd {
+    @extend .wrapper;
+  }
 }
 
 @media screen and (min-width: 640px) {
