--- a/source/stylesheets/ggs/_type-size-presets.scss
+++ b/source/stylesheets/ggs/_type-size-presets.scss
@@ -76,12 +76,14 @@ h6 {
 
 p {
   @extend .font-m;
-  @include margin-leader(1,$font-m);
+  @include margin-trailer(1,$font-m);
 }
 
 blockquote {
-  border-left: 5px solid $gray - #333;
+  border-left: 5px solid #999;
   padding-left: 20px;
+  margin-left: 20px;
+  @include margin-trailer(1,$font-m);
   p {
     @extend .font-l;
     margin: 0;
@@ -93,4 +95,19 @@ blockquote {
       content: "— ";
     }
   }
+}
+
+code, pre {
+  font-family: Monaco, Andale Mono, Courier New, monospace;
+  @extend .font-s;
+}
+
+pre {
+  background: $gray;
+  padding: 5px 9px;
+  border: 1px solid rgba(0,0,0,.2);
+  @include box-shadow(0 1px 2px rgba(0,0,0,.1));
+  @include border-radius(3px);
+  @include margin-trailer(1,$font-s);
+  overflow: auto;
 }
