--- a/source/_header.haml
+++ b/source/_header.haml
@@ -1,6 +1,7 @@
-%h1 Golden Grid System<br>Compass Framework
+%h1 +Golden Grid System <br>+Bootstrap <br>+Compass Framework
 %nav
   %h2.hide Main Navigation
-/  %ul
-/    %li= link_to( "Typography", "#type" )
-/    %li= link_to( "Form", "#form" )
+  %ul
+    %li= link_to( "Github", "https://github.com/evenwu/compass-ggs-framework" )
+    %li= link_to( "Golden Gird System", "http://goldengridsystem.com" )
+    %li= link_to( "Bootstrap", "http://twitter.github.com/bootstrap/" )
