--- a/source/stylesheets/ggs/column/_eight-column.scss
+++ b/source/stylesheets/ggs/column/_eight-column.scss
@@ -28,6 +28,14 @@
   .content {
     @include ggs-container($column);
   }
+  #hd {
+    h1 {
+      @include adjust-font-size-to(60px);
+    }
+    nav {
+      @include adjust-font-size-to($font-l);
+    }
+  }
   #heading {
     float: left;
     @include ggs-column(2,$column);
