--- a/source/stylesheets/ggs/column/_four-column.scss
+++ b/source/stylesheets/ggs/column/_four-column.scss
@@ -12,6 +12,12 @@
 
   #hd {
     @extend .wrapper;
+    h1 {
+      @include adjust-font-size-to($font-xxl);
+    }
+    nav li {
+      float: none;
+    }
   }
 }
 
