--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -18,6 +18,9 @@ a {
 
 #hd {
   @include pie-clearfix;
+  nav {
+    @include padding-leader(1);
+  }
   li {
     float: left;
     margin-right: 30px;
