add sample code

--- a/source/_header.haml
+++ b/source/_header.haml
@@ -1,4 +1,4 @@
-%h1 +Golden Grid System <br>+Bootstrap <br>+Compass Framework
+%h1 +Golden Grid System <br>+Bootstrap Style <br>+Compass Framework
 %nav
   %h2.hide Main Navigation
   %ul
