--- a/source/_heading.haml
+++ b/source/_heading.haml
@@ -1,14 +1,20 @@
 %section#heading
   %h1
     h1. 標題 1
+    %code &lt;h1&gt;
   %section
     %h2
       h2. 標題 2
+      %code &lt;h2&gt;
     %h3
       h3. 標題 3
+      %code &lt;h3&gt;
     %h4
       h4. 標題 4
+      %code &lt;h4&gt;
     %h5
       h5. 標題 5
+      %code &lt;h5&gt;
     %h6
       h6. 標題 6
+      %code &lt;h6&gt;
