--- a/source/_paragraph.haml
+++ b/source/_paragraph.haml
@@ -1,85 +1,7 @@
-#paragraph
-  %section
-    %h2.title Paragraph 段落
-    %p
-      %span{ :class => "lipsum(3)" }
-    %p= lorem.sentences 5
-#lists
-  %section
-    .title
-      %h2 Lists 列表
-    %section.type
-      %h3
-        Unordered
-        %small
-          無序列表 1
-      .list
-        %ul
-          - 5.times do
-            %li= lorem.word
-          %li
-            = lorem.word
-            %ul
-              - 4.times do
-                %li= lorem.word
-          - 3.times do
-            %li= lorem.word
-    %section.type
-      %h3
-        Unstyled
-        %small
-          無序列表 2
-      .list
-        %ul.unstyled
-          - 5.times do
-            %li= lorem.word
-          %li
-            = lorem.word
-            %ul
-              - 4.times do
-                %li= lorem.word
-          - 3.times do
-            %li= lorem.word
-    %section.type
-      %h3
-        Ordered
-        %small
-          有序列表
-      .list
-        %ol
-          - 5.times do
-            %li= lorem.word
-          %li
-            = lorem.word
-            %ol
-              - 4.times do
-                %li= lorem.word
-          - 3.times do
-            %li= lorem.word
-    %section.type
-      %h3
-        Description
-        %small
-          說明列表
-      .list
-        %dl
-          - 3.times do
-            %dt= lorem.word
-            %dd= lorem.sentence
-#quote
-  %section
-    %h2.title Quote 引言
-    %blockquote
-      %p
-        %span{ :class => "lipsum" }
-      %cite= lorem.name
-    %blockquote
-      %p= lorem.sentence
-      %cite= lorem.name
-#code
-  %section
-    %h2.title Code 程式碼
-    #section
-      %pre= partial "code"
-    #section
-      %pre.prettyprint= partial "code"
+%section#paragraph
+  %h2.title
+    Paragraphs 段落
+    %code &lt;p&gt;
+  %p
+    %span{ :class => "lipsum(3)" }
+  %p= lorem.sentences 5
