--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -3,9 +3,14 @@
 - content_for :header do
   = partial "header"
 
-
 = partial "heading"
 
 = partial "paragraph"
 
 = partial "form"
+
+= partial "lists"
+
+= partial "quote"
+
+= partial "code"
