--- a/source/_code.haml
+++ b/source/_code.haml
@@ -1,4 +1,15 @@
-\&lt;div&gt;
-\    &lt;h1&gt;&#27161;&#38988;&lt;/h1&gt;
-\    &lt;p&gt;今天天氣很好&lt;/p&gt;
-\&lt;/div&gt;
+%section#code
+  %h2.title
+    Code 程式碼
+    %code &lt;code&gt;
+    %code &lt;pre&gt;
+  #usage
+    %p
+      %code &lt;pre&gt;your code&lt;/pre&gt;
+  #section
+    %pre= partial "code-code1"
+  #usage
+    %p
+      %code &lt;pre class=&quot;prettyprint&quot;&gt;your code&lt;/pre&gt;
+  #section
+    %pre.prettyprint= partial "code-code1"
