--- a/source/stylesheets/_ggs.scss
+++ b/source/stylesheets/_ggs.scss
@@ -6,6 +6,8 @@
 // Compass Extension
 // by evenwu                <http://evendesign.tw>
 //
+//
+// setting:
 
 $ggs-font-size: 16 !default;
 $ggs-line: 24 !default;
@@ -16,11 +18,7 @@ $ggs-em: $ggs-font-size * 1 !default;
 $head-color: #444 !default;
 $p-color: #444 !default;
 
-$mobile-width: 640px;
-$tablet-width: 1024px;
-$desktop-width: 1920px;
-
-// default importing...
+// end
 
 $base-font-size: $ggs-font-size * 1px;
 $base-line-height: $ggs-line * 1px;
