--- a/source/stylesheets/ggs/_prettify.scss
+++ b/source/stylesheets/ggs/_prettify.scss
@@ -7,7 +7,7 @@
 .typ, .atn, .dec, .var { color: #CB4B16; }
 .pln { color: #657b83; }
 pre.prettyprint {
-  background: #fefbf3;
+  background: white;
 }
 
 /*
