--- a/source/stylesheets/ggs/_default-style.scss
+++ b/source/stylesheets/ggs/_default-style.scss
@@ -112,3 +112,45 @@ dt {
 dd {
   padding-left: 1em;
 }
+
+
+blockquote {
+  border-left: 5px solid #999;
+  padding-left: 20px;
+  margin-left: 20px;
+  @include margin-trailer(1,$font-m);
+  p {
+    @extend .font-l;
+    margin: 0;
+  }
+  cite {
+    @extend .font-s;
+    color: fade-out($head-color ,.5);
+    &:before {
+      content: "— ";
+    }
+  }
+}
+
+code {
+  font-family: Monaco, Andale Mono, Courier New, monospace;
+  font-weight: normal;
+  color: #657B83;
+  background: white;
+  padding: 1px 3px;
+  @include border-radius(3px);
+  font-size: 12px;
+  line-height: 1;
+}
+
+pre {
+  background: white;
+  color: #657B83;
+  padding: 5px 9px;
+  border: 1px solid rgba(0,0,0,.2);
+  @include box-shadow(0 1px 2px rgba(0,0,0,.1));
+  @include border-radius(3px);
+  @include margin-trailer(1,$font-s);
+  overflow: auto;
+  @extend .font-s;
+}
