--- a/source/layout.haml
+++ b/source/layout.haml
@@ -4,6 +4,7 @@
     %meta{:charset => "utf-8"}
     -# Always force latest IE rendering engine (even in intranet) & Chrome Frame
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
+    %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}
     = yield_content :head
     = stylesheet_link_tag ( "main" )
     = javascript_include_tag( "https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js","http://more.handlino.com/javascripts/moretext-1.1.js","main" )
